<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backToHomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/lists"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/arrow_left" />

        <in.srain.cube.views.ptr.PtrClassicFrameLayout
            android:id="@+id/ultra_ptr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/today_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/roboto_bold"
                        android:padding="8dp"
                        android:text="@string/app_name"
                        android:textColor="@color/dark_yellow"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/icloud_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:nestedScrollingEnabled="false"
                        android:visibility="gone" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/no_RemindersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/no_reminders"
        android:textColor="@color/lighter_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />
</RelativeLayout>