<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/backToHomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/roboto_regular"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:text="@string/lists"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/arrow_left" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/today_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="8dp"
                    android:text="@string/today"
                    android:textColor="@color/light_blue"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/today_text"
                    android:background="@color/my_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view1"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <!-- Morning Section -->
                    <TextView
                        android:id="@+id/text_morning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:fontFamily="@font/roboto_bold"
                        android:padding="8dp"
                        android:text="@string/morning"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_morning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:nestedScrollingEnabled="false"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/my_gray" />

                    <!-- Afternoon Section -->
                    <TextView
                        android:id="@+id/text_afternoon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:fontFamily="@font/roboto_bold"
                        android:padding="8dp"
                        android:text="@string/afternoon"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_afternoon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:nestedScrollingEnabled="false"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/my_gray" />

                    <!-- Tonight Section -->
                    <TextView
                        android:id="@+id/text_tonight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:fontFamily="@font/roboto_bold"
                        android:padding="8dp"
                        android:text="@string/tonight"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_tonight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/my_gray" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>